--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 :root, 
 body, 
 html{
- background-color: #f5f5f5; 
+ background-color:skyblue; 
  box-sizing: border-box;
 }
 
@@ -43,4 +43,9 @@ background: transparent;
 
 body {
   font-family: Arial, sans-serif;
+
+ 
 }
+
+
+
