--- a/src/components/static/Header.css
+++ b/src/components/static/Header.css
@@ -1,5 +1,6 @@
 .header {
     /* spacing */
+    overflow: hidden;
     padding: 15px 20px;
     display: flex;
     justify-content: space-between;
@@ -22,24 +23,86 @@
     height: 40px;
 }
 
-.header__input {
+/* .header__input {
     padding-left: 10px;
     display: flex;
     align-items: center;
     background-color: #eff2f5;
     margin-left: 20px;
-    border-radius: 999px;
+    border-radius: 9999px;
 
 }
 
 .header__input > input {
     border: none;
     background-color: transparent;
-    outline-width: 0;
+    outline-width: 0 s;
+    text-decoration: none !important;
+} */
+
+.header__input{
+    margin-left: 20px;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    background-color: #eff2f5;
+    border-radius: 9999px;
+}
+.input-search{
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 15px;
+    outline: none;
+    border-radius: 25px;
+    transition: all .5s ease-in-out;
+    background-color: #eff2f545;
+    padding-right: 40px;
+    color:rgb(0, 0, 0);
 }
 
+.input-search::placeholder{
+/* color:rgba(255,255,255,.5); */
+    font-size: 15px;
+    font-weight: 100;
+}
+/* button css */
+.btn-search{
+    width: 50px;
+    height: 50px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0px;
+    background-color:transparent;
+    pointer-events: painted;  
+}
+/* animate button to open search */
+.btn-search:focus ~ .input-search{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+/* keeps input search open */
+.input-search:focus{
+    width: 300px;
+    border-radius: 0px;
+    background-color: transparent;
+    border-bottom:1px solid rgba(255,255,255,.5);
+    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+
 .header__middle {
-    display: flex;
+    display: inline-flex;
     flex: 1;
     justify-content: center;
 }
@@ -56,9 +119,13 @@
     color: #2e81f4;
 }
 .header__option--active{
-    border-bottom: 4px solid #2e81f4;
+    /* border-bottom: 4px solid #2e81f4; */
+    background-color: #eff2f5;
+    border-radius: 22px;
 }
-
+.header__option--active > p{
+    color: #2e81f4;
+}
  /* space between middle icons */
 .header__option {
     display: flex;
@@ -69,15 +136,23 @@
 /* bg of icon on hover */
 .header__option:hover{
     background-color: #eff2f5;
-    border-radius: 10px;
+    border-radius: 22px;
     align-items: center;
     padding: 0 30px;
     border-bottom: none;
 }
-
+.header__option > p {
+    padding: 0 10px;
+    font-size: large;
+}
+.header__option:hover > p{
+    color: #2e81f4;
+}
 .header__info{
     display: flex;
     align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .header__info > h4 {
