--- a/src/components/static/Header.css
+++ b/src/components/static/Header.css
@@ -1,164 +1,172 @@
-.header {
-    /* spacing */
-    overflow: hidden;
-    padding: 15px 20px;
-    display: flex;
-    justify-content: space-between;
 
-    /* positioning */
-    position: sticky;
-    z-index: 100;
-    top:0;
+/* For Desktop */
+@media screen and (min-width: 1000px) {
+    .header {
+        /* spacing */
+        overflow: hidden;
+        padding: 15px 20px;
+        display: flex;
+        justify-content: space-between;
 
-    /* background */
-    box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
-    background-color: white;
-}
-.header__left {
-    display: flex;
-    justify-content: space-evenly;
-}
+        /* positioning */
+        position: sticky;
+        z-index: 100;
+        top:0;
 
-.header__left > img {
-    height: 40px;
-}
+        /* background */
+        box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
+        background-color: white;
+    }
 
-/* .header__input {
-    padding-left: 10px;
-    display: flex;
-    align-items: center;
-    background-color: #eff2f5;
-    margin-left: 20px;
-    border-radius: 9999px;
+    .header__left {
+        display: flex;
+        justify-content: space-evenly;
+    }
 
-}
+    .header__left > img {
+        height: 40px;
+    }
 
-.header__input > input {
-    border: none;
-    background-color: transparent;
-    outline-width: 0 s;
-    text-decoration: none !important;
-} */
+    /* .header__input {
+        padding-left: 10px;
+        display: flex;
+        align-items: center;
+        background-color: #eff2f5;
+        margin-left: 20px;
+        border-radius: 9999px;
 
-.header__input{
-    margin-left: 20px;
-    width: fit-content;
-    height: fit-content;
-    position: relative;
-    background-color: #eff2f5;
-    border-radius: 9999px;
-}
-.input-search{
-    height: 50px;
-    width: 50px;
-    border-style: none;
-    padding: 10px;
-    font-size: 15px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
-    background-color: #eff2f545;
-    padding-right: 40px;
-    color:rgb(0, 0, 0);
-}
+    }
 
-.input-search::placeholder{
-/* color:rgba(255,255,255,.5); */
-    font-size: 15px;
-    font-weight: 100;
-}
-/* button css */
-.btn-search{
-    width: 50px;
-    height: 50px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
-    position: absolute;
-    right: 0px;
-    background-color:transparent;
-    pointer-events: painted;  
-}
-/* animate button to open search */
-.btn-search:focus ~ .input-search{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
+    .header__input > input {
+        border: none;
+        background-color: transparent;
+        outline-width: 0 s;
+        text-decoration: none !important;
+    } */
+    
+    .header__menu {
+        display: none;
+    }
+    .header__input{
+        margin-left: 20px;
+        width: fit-content;
+        height: fit-content;
+        position: relative;
+        background-color: #eff2f5;
+        border-radius: 9999px;
+    }
+    .input-search{
+        height: 50px;
+        width: 50px;
+        border-style: none;
+        padding: 10px;
+        font-size: 15px;
+        outline: none;
+        border-radius: 25px;
+        transition: all .5s ease-in-out;
+        background-color: #eff2f545;
+        padding-right: 40px;
+        color:rgb(0, 0, 0);
+    }
 
-/* keeps input search open */
-.input-search:focus{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
+    .input-search::placeholder{
+    /* color:rgba(255,255,255,.5); */
+        font-size: 15px;
+        font-weight: 100;
+    }
+    /* button css */
+    .btn-search{
+        width: 50px;
+        height: 50px;
+        border-style: none;
+        font-size: 20px;
+        font-weight: bold;
+        outline: none;
+        cursor: pointer;
+        border-radius: 50%;
+        position: absolute;
+        right: 0px;
+        background-color:transparent;
+        pointer-events: painted;  
+    }
+    /* animate button to open search */
+    .btn-search:focus ~ .input-search{
+        width: 300px;
+        border-radius: 0px;
+        background-color: transparent;
+        border-bottom:1px solid rgba(255,255,255,.5);
+        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    }
+
+    /* keeps input search open */
+    .input-search:focus{
+        width: 300px;
+        border-radius: 0px;
+        background-color: transparent;
+        border-bottom:1px solid rgba(255,255,255,.5);
+        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    }
 
 
-.header__middle {
-    display: inline-flex;
-    flex: 1;
-    justify-content: center;
-}
-/* change icon color */
-.header__option > .MuiSvgIcon-root {
-    color: gray;
-}
-.header__option:hover > .MuiSvgIcon-root {
-    color: #2e81f4;
-}
+    .header__middle {
+        display: inline-flex;
+        flex: 1;
+        justify-content: center;
+    }
+    /* change icon color */
+    .header__option > .MuiSvgIcon-root {
+        color: gray;
+    }
+    .header__option:hover > .MuiSvgIcon-root {
+        color: #2e81f4;
+    }
 
-/* If buttons are active */
-.header__option--active > .MuiSvgIcon-root{
-    color: #2e81f4;
-}
-.header__option--active{
-    /* border-bottom: 4px solid #2e81f4; */
-    background-color: #eff2f5;
-    border-radius: 22px;
-}
-.header__option--active > p{
-    color: #2e81f4;
-}
- /* space between middle icons */
-.header__option {
-    display: flex;
-    align-items: center;
-    padding: 0px 30px;
-    cursor: pointer;
-}
-/* bg of icon on hover */
-.header__option:hover{
-    background-color: #eff2f5;
-    border-radius: 22px;
-    align-items: center;
-    padding: 0 30px;
-    border-bottom: none;
-}
-.header__option > p {
-    padding: 0 10px;
-    font-size: large;
-}
-.header__option:hover > p{
-    color: #2e81f4;
-}
-.header__info{
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    margin-right: 10px;
-}
+    /* If buttons are active */
+    .header__option--active > .MuiSvgIcon-root{
+        color: #2e81f4;
+    }
+    .header__option--active{
+        /* border-bottom: 4px solid #2e81f4; */
+        background-color: #eff2f5;
+        border-radius: 22px;
+    }
+    .header__option--active > p{
+        color: #2e81f4;
+    }
+    /* space between middle icons */
+    .header__option {
+        display: flex;
+        align-items: center;
+        padding: 0px 30px;
+        cursor: pointer;
+    }
+    /* bg of icon on hover */
+    .header__option:hover{
+        background-color: #eff2f5;
+        border-radius: 22px;
+        align-items: center;
+        padding: 0 30px;
+        border-bottom: none;
+    }
+    .header__option > p {
+        padding: 0 10px;
+        font-size: large;
+    }
+    .header__option:hover > p{
+        color: #2e81f4;
+    }
+    .header__info{
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 
-.header__info > h4 {
-    margin-left: 10px;
-}
+    .header__info > h4 {
+        margin-left: 10px;
+    }
 
-.header__right {
-    display: flex;
+    .header__right {
+        display: flex;
+    }
 }
