--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,51 @@
-body {
+*{
   margin: 0;
-  padding: 0;
-  font-family: 'Open sans', sans-serif;
-  font-weight: 500;
+}
+body {
+  /* when i scroll vertically I see scrollbar on rhs */
+  /* overflow-y : scroll; */
+  /* when i scroll horizonatally no scrollbar on bottom */
+  /* overflow-x : hidden; */
 }
 
+:root,
+html,
+body{
+ background-color:none; 
+ box-sizing: border-box;
+ margin:0;
+ padding: 0;
+ font-family: Arial, sans-serif;
+}
+
+
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+html ,
+i,
+img,
+label,
+li,
+nav,
+p,
+small,
+span,
+ul
+{
+margin : 0;
+padding: 0;
+border: 0;
+outline: none;
+/* font-size: 100%; */
+/* vertical-align: baseline; */
+background: transparent;
+}
 
 
 
