Left Section Added

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
         padding: 15px 20px;
         display: flex;
         justify-content: space-between;
-
+        margin-bottom:10px;
         /* positioning */
         position: sticky;
         z-index: 100;
