Right panel added to home page

--- a/src/containers/Home/RightPanel/RightPanel.css
+++ b/src/containers/Home/RightPanel/RightPanel.css
@@ -1,5 +1,9 @@
 .RightPanel{
-    background-color: lightblue;
-    height: 100px;
-    width: 100px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.RightPanel > div {
+    margin: 10px;
 }
