--- a/src/components/RightPanel/Profile/Profile.css
+++ b/src/components/RightPanel/Profile/Profile.css
@@ -20,7 +20,13 @@
     text-align: center;
     /* border: 1px solid black; */
 }
-.Info img{
+.Info > div{
+    margin: 5px;
+}
+.InfoBox{
+    width: 100px;
+}
+.InfoBox img{
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -45,10 +51,13 @@
     border-radius: 10px;
     border: none;
     cursor: pointer;
-    background-color: lightblue;
+    background-color: #1DA1F2;
+    color: white;
+    font-weight: 600;
+    margin: 5px;
 }
 
-.stats div{
+.stats > div{
     margin: 5px;
 }
 
@@ -65,4 +74,14 @@
     height: 1px;
     width: 100%;
     background-color: black;
+}
+
+.Intrest > p{
+    font-weight: bold;
+}
+.Intrest > div{
+    margin-left: 5px;
+}
+.Intrest > div > p {
+    font-size: 13px;
 }
