--- a/src/components/RightPanel/TopNews/TopNews.css
+++ b/src/components/RightPanel/TopNews/TopNews.css
@@ -3,17 +3,17 @@
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .heading {
-    font-size: 20px;
+    font-size: 17px;
     text-align: center;
     width: 50%;
-    background-color: lightblue;
+    /* background-color:#1DA1F2 ; */
     margin: auto;
-    padding: 3px 7px;
+    padding: 1px 7px;
     border-radius: 20px;
-    box-shadow: 0 2px 3px lightblue;
+    border: 1px solid black;
 }
 
