--- a/src/components/RightPanel/Profile/Profile.css
+++ b/src/components/RightPanel/Profile/Profile.css
@@ -1,6 +1,5 @@
 .Profile{
-    height: 100%;
-    width: 300px;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -9,7 +8,7 @@
     align-items: center;
     padding: 20px;
     border-radius: 10px;
-
+    background-color: white;
 }
 
 .Info {
@@ -42,6 +41,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.stats > div> div{
+    margin: 5px;
 }
 
 .stats button {
