--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -185,6 +185,7 @@
         position: sticky;
         z-index: 100;
         top:0;
+        margin-bottom: 10px;
 
         /* background */
         box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
