--- a/src/components/auth/css/Login-Signup.css
+++ b/src/components/auth/css/Login-Signup.css
@@ -185,7 +185,7 @@ h2 {
   font-family: Poppins;
   font-size: 36px; }
 
-.login-main {
+.login_main {
   background: #f8f8f8;
   padding: 80px 0; }
 
