--- a/src/components/MainSection/CreateFeed/CreateFeed.css
+++ b/src/components/MainSection/CreateFeed/CreateFeed.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
     background-color: #e7e4e4;
     padding: 10px;
-    width: 500px;
+    min-width: 300px;
+    max-width: 650px;
     border-radius: 15px;
 }
 
