--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-between;
   height: 86vh;
+  max-width:1400px;
+  margin: auto;
+
 }
 
 .main > div{
@@ -16,3 +19,8 @@
   font-weight: 800;
   font-size: xxx-large;
 }
+
+
+/* .home{
+  max-width: 1600px;
+} */
