--- a/src/containers/Home/LeftSection/LeftSection.css
+++ b/src/containers/Home/LeftSection/LeftSection.css
@@ -3,16 +3,17 @@
     background-color: white;
    
     height : 82.5vh;
-    width:24%;
+    width:25%;
     display: list-item;
     min-width: 150px;
-    max-width: 200px;
+    max-width: 210px;
     margin-left:1%;
     overflow-y :auto;
     border-radius: 20px;
     padding: 10px;
     position: sticky;
-    box-shadow: 0 1px 2px grey;
+    box-shadow: 0 1px 2px rgb(228, 228, 228);
+   
    
 }
 
@@ -35,10 +36,10 @@
 }
 
 .sectionName{
-    font-size: 12px;
+    font-size: 12.5px;
     margin-left: 6px;
     /* color: white; */
-    color:black;
+    color:grey;
     margin-bottom: 2px;
 }
 
@@ -77,7 +78,7 @@
 }
 
 .sectionImage{
-    width: 100%;
+    width: 95%;
     height: 100%; 
     object-fit: contain;
 }
@@ -101,7 +102,7 @@
     object-fit: contain;
     /* color:white; */
     color:black;
-   font-weight: 630;
+   font-weight: 450;
    font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
