--- a/src/components/MainSection/CreateFeed/CreateFeed.css
+++ b/src/components/MainSection/CreateFeed/CreateFeed.css
@@ -2,9 +2,10 @@
     box-sizing: border-box;
     background-color: #e7e4e4;
     padding: 10px;
-    min-width: 300px;
-    max-width: 650px;
+    /* min-width: 300px;
+    max-width: 650px; */
     border-radius: 15px;
+    margin: 0 5px;
 }
 
 .Type{
