--- a/src/containers/Home/LeftSection/LeftSection.css
+++ b/src/containers/Home/LeftSection/LeftSection.css
@@ -9,10 +9,10 @@
     max-width: 210px;
     margin-left:1%;
     overflow-y :auto;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 10px;
     position: sticky;
-    box-shadow: 0 1px 2px rgb(228, 228, 228);
+    box-shadow: 0 2px 3px #ccc;
    
    
 }
