--- a/src/components/RightPanel/Profile/Profile.css
+++ b/src/components/RightPanel/Profile/Profile.css
@@ -7,7 +7,7 @@
     box-shadow: 0 2px 3px #ccc;
     align-items: center;
     padding: 20px;
-    border-radius: 25px;
+    border-radius: 10px;
     background-color: white;
 }
 
@@ -20,7 +20,7 @@
     /* border: 1px solid black; */
 }
 .Info > div{
-    margin: 5px;
+    margin-bottom: 5px;
 }
 .InfoBox{
     width: 100px;
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 5px;
+    margin: 0px 5px;
 }
 
 .stats > div{
@@ -44,7 +44,7 @@
 }
 
 .stats > div> div{
-    margin: 5px;
+    margin: 0px 5px;
 }
 
 .stats button {
