--- a/src/containers/Home/LeftSection/LeftSection.css
+++ b/src/containers/Home/LeftSection/LeftSection.css
@@ -2,7 +2,7 @@
     /* background-color: rgba(29, 31, 41,1); */
     background-color: white;
    
-    height : 82.5vh;
+    height : 97%;
     width:25%;
     display: list-item;
     min-width: 150px;
