added switch button to switch between profile and chat on home page

--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,7 +1,6 @@
 .Chat{
     height: 100%;
-    max-width: 320px;
-    min-width: 300px;
+    width: 320px;
     background-color: white;
     padding:10px;
     border-radius: 10px;
