--- a/src/components/Home/Chat/ChatItem/ChatItem.css
+++ b/src/components/Home/Chat/ChatItem/ChatItem.css
@@ -7,6 +7,12 @@
     box-sizing: border-box;
     padding: 5px;
     margin: 7px 0px;
+    cursor: pointer;
+}
+
+.ChatItem:hover{
+    background-color:#dadada ;
+    border-radius: 5px;
 }
 
 .ChatItem img{
@@ -16,8 +22,6 @@
     display: inline-block;
     margin-right: 10px;
 }
-
-
 
 .ChatPreview{
     width: 100%;
