--- a/src/containers/Home/RightSection/RightPanel.css
+++ b/src/containers/Home/RightSection/RightPanel.css
@@ -1,12 +1,25 @@
 .RightPanel{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     max-width: 320px;
+    position: relative;
 }
 
-.RightPanel > div {
-    margin-bottom: 10px;
+.SwitchButton {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    box-shadow: 0 2px 3px #ccc;
+    background-color: coral;
+    color: white;
+    padding-top: 5px;
+    cursor: pointer;
 }
 
 @media (max-width: 960px){
