--- a/src/containers/Home/MainSection/MainSection.css
+++ b/src/containers/Home/MainSection/MainSection.css
@@ -10,6 +10,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    
+}
+
+.leftSection::-webkit-scrollbar{
+    display: none;
 }
 
 .Line{
@@ -24,9 +29,13 @@
 }
 
 .Feed{
-    flex: 1.7;
-    scrollbar-width: thin;
+    flex: 2.2;
+    scrollbar-width: none;
     overflow-y: scroll;
+}
+
+.Feed::-webkit-scrollbar{
+    display: none;
 }
 
 .Activity{
