--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -1,10 +1,12 @@
 .Post{
     box-sizing: border-box;
-    background-color: #e7e4e4;
+    background-color: #e0dfdf;
     padding: 20px;
     border-radius: 15px;
     margin: 15px 5px;
-    min-width: 300px;
+    /* min-width: 300px; */
+    max-width: 550px;
+    margin: 10px auto;
 }
 .Post > div{
     margin-bottom: 10px;
@@ -33,7 +35,6 @@
 }
 
 .PostImage{
-    height: 300px;
     display: flex;
     align-items: center;
 }
