--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,14 +1,22 @@
 .Chat{
-    height: 100%;
-    width: 320px;
+    min-height: 100vh;
+    width: 370px;
     background-color: white;
     padding:10px;
-    border-radius: 10px;
+    overflow-y: scroll;
     box-sizing: border-box;
-    box-shadow: 0 2px 3px #ccc;
+    box-shadow: 0 5px 7px #ccc;
     border: 1px solid #eee;
+    position: fixed;
+    right: -100%;
+    top: 80px;
+    z-index: 100;
+    transition: all 0.5s;
 }
 
+.ActiveChat{
+    right: 0%;
+}
 .Header {
     width: 100%;
     background-color: #F9F9F9;
