--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,7 +1,10 @@
+.Home{
+  position: relative;
+}
+
 .main{
   display: flex;
-  justify-content: space-between;
-  height: 86vh;
+  justify-content: center;
   max-width:1400px;
   margin: auto;
 
@@ -18,6 +21,23 @@
   color: black;
   font-weight: 800;
   font-size: xxx-large;
+}
+
+.SwitchButton {
+  position: fixed;
+  bottom: 10px;
+  right: 25px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  box-shadow: 0 2px 3px #ccc;
+  background-color: coral;
+  color: white;
+  padding-top: 5px;
+  cursor: pointer;
+  z-index: 200;
 }
 
 
