--- a/src/containers/Home/MainSection/MainSection.css
+++ b/src/containers/Home/MainSection/MainSection.css
@@ -3,13 +3,13 @@
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     border-radius: 10px;
     padding: 20px;
     background-color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-around;
 }
 
 .Line{
@@ -24,9 +24,7 @@
 }
 
 .Feed{
-    flex: 1.7;
-    scrollbar-width: thin;
-    overflow-y: scroll;
+    flex: 1;
 }
 
 .Activity{
