changed design of post

--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -7,10 +7,12 @@
     /* min-width: 300px; */
     max-width: 550px;
     margin: 10px auto;
+    background-color: white;
+    border: 1px solid #eee;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 .Post > div{
     margin-bottom: 10px;
-
 }
 .Header {
     display: flex;
@@ -33,7 +35,11 @@
 .NamePhoto > p{
     margin-left: 10px;
 }
-
+.Category{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 .PostImage{
     display: flex;
     align-items: center;
@@ -51,6 +57,9 @@
     width: 100%;
     flex-direction: column;
     box-sizing: border-box;
+    margin-bottom: 0px !important;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 5px;
 }
 
 .Icons{
@@ -63,20 +72,32 @@
 }
 
 .IconLeft{
-    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-
-.IconRight{
-    width: 20%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.IconButton {
+    margin: 0px 5px;
+}
+.Comment{
+    margin-left: 5px;
+    width: 80%;
+}
+.Comment input{
+    padding: 5px 5px;
+    border: none;
+    outline: none;
+}
+.Comment input:focus{
+    border: none;
+    outline: none;
 }
 
-
+.VerticalLine{
+    height: 25px;
+    width: 1px;
+    background-color: grey;
+}
 .PostInfo{
     padding: 0px 5px;
 }
