--- a/src/components/Home/RightPanel/Profile/Profile.css
+++ b/src/components/Home/RightPanel/Profile/Profile.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     box-sizing: border-box;
     border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     align-items: center;
     padding: 20px;
     border-radius: 10px;
