--- a/src/containers/Home/LeftSection/LeftSection.css
+++ b/src/containers/Home/LeftSection/LeftSection.css
@@ -12,7 +12,7 @@
     border-radius: 10px;
     padding: 10px;
     position: sticky;
-    box-shadow: 0 2px 3px #ccc;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
    
    
 }
