--- a/src/containers/Home/MainSection/MainSection.css
+++ b/src/containers/Home/MainSection/MainSection.css
@@ -1,12 +1,11 @@
 .MainSection {
     box-sizing: border-box;
-    border: 1px solid #eee;
-    box-shadow: 0 2px 3px #ccc;
+    /* border: 1px solid #eee; */
+    /* box-shadow: 0 2px 3px #ccc; */
     height: 100%;
     /* width: 100%; */
     border-radius: 10px;
-    padding: 20px;
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     flex-direction: row;
     justify-content:space-around;
