--- a/src/containers/Home/RightSection/RightPanel.css
+++ b/src/containers/Home/RightSection/RightPanel.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     height: 100%;
     max-width: 320px;
-    position: relative;
+    position: sticky;
+    right: 0px;
+    top: 90px;
 }
 
 
