--- a/src/components/Home/MainSection/CreateFeed/CreateFeed.css
+++ b/src/components/Home/MainSection/CreateFeed/CreateFeed.css
@@ -56,3 +56,10 @@
     flex-direction: row;
     justify-content: space-around;
 }
+
+@media (max-width: 600px){
+
+    .CreateFeed{
+        margin-top: 5px;
+    }
+}
