--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -76,6 +76,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    margin: 0px 10px 0px 0px;
 }
 
 .Comment{
