--- a/src/components/auth/css/Login-Signup.css
+++ b/src/components/auth/css/Login-Signup.css
@@ -1,5 +1,5 @@
 /* @extend display-flex; */
-display-flex, .display-flex, .display-flex-center, .signup-content, .signin-content, .social-login, .socials {
+display-flex, .display-flex, .displayFlexCenter, .signupContent, .signinContent, .socialLogin, .socials {
   display: flex;
   display: -webkit-flex; }
 
@@ -185,11 +185,12 @@ h2 {
   font-family: Poppins;
   font-size: 36px; }
 
-.login_main {
+.loginMain {
   background: #f8f8f8;
+  /* background: pink; */
   padding: 80px 0; }
 
-  .signup-main {
+  .signupMain {
     background: #f8f8f8;
     padding: 80px 0; }
 
@@ -232,7 +233,7 @@ body {
   -o-align-items: center;
   -ms-align-items: center; }
 
-.display-flex-center {
+.displayFlexCenter {
   justify-content: center;
   -moz-justify-content: center;
   -webkit-justify-content: center;
@@ -257,27 +258,27 @@ body {
 .signup {
   margin-bottom: 10px; }
 
-.signup-content {
+.signupContent {
   padding: 75px 0; }
 
-.signup-form, .signup-image, .signin-form, .signin-image {
+.signupForm, .signupImage, .signinForm, .signinImage {
   width: 50%;
   overflow: hidden; }
 
-.signup-image {
+.signupImage {
   margin: 0 55px; }
 
-.form-title {
+.formTitle {
   margin-bottom: 33px; }
 
-.signup-image {
+.signupImage {
   margin-top: 45px; }
 
 figure {
   margin-bottom: 50px;
   text-align: center; }
 
-.form-submit {
+.formSubmit {
   display: inline-block;
   background: #6dabe4;
   color: #fff;
@@ -291,35 +292,35 @@ figure {
   -ms-border-radius: 5px;
   margin-top: 25px;
   cursor: pointer; }
-  .form-submit:hover {
+  .formSubmit:hover {
     background: #4292dc; }
 
 #signin {
   margin-top: 16px; }
 
-.signup-image-link {
+.signupImageLink {
   font-size: 14px;
   color: #222;
   display: block;
   text-align: center; }
 
-.term-service {
+.termService {
   font-size: 13px;
   color: #222; }
 
-.signup-form {
+.signupForm {
   margin-left: 75px;
   margin-right: 75px;
   padding-left: 34px; }
 
-.register-form {
+.registerForm {
   width: 100%; }
 
-.form-group {
+.formGroup {
   position: relative;
   margin-bottom: 25px;
   overflow: hidden; }
-  .form-group:last-child {
+  .formGroup:last-child {
     margin-bottom: 0px; }
 
 input {
@@ -398,7 +399,7 @@ input[type=checkbox]:not(old):checked + label > span:before {
   font-family: 'Material-Design-Iconic-Font';
   font-weight: bold; }
 
-.agree-term {
+.agreeTerm {
   display: inline-block;
   width: auto; }
 
@@ -443,7 +444,7 @@ label.valid {
     font-size: 16px;
     color: green; }
 
-.label-agree-term {
+.labelAgreeTerm {
   position: relative;
   top: 0%;
   transform: translateY(0);
@@ -452,14 +453,14 @@ label.valid {
   -o-transform: translateY(0);
   -ms-transform: translateY(0); }
 
-.material-icons-name {
+.materialIconsName {
   font-size: 18px; }
 
-.signin-content {
+.signinContent {
   padding-top: 67px;
   padding-bottom: 87px; }
 
-.social-login {
+.socialLogin {
   align-items: center;
   -moz-align-items: center;
   -webkit-align-items: center;
@@ -475,7 +476,7 @@ label.valid {
     -ms-align-items: center;
     margin-top: 20px; }
 
-.social-label {
+.socialLabel {
   display: inline-block;
   margin-right: 15px; }
 
@@ -510,20 +511,20 @@ label.valid {
     -webkit-transform: scale(1.3) translateZ(0);
     transform: scale(1.3) translateZ(0); }
 
-.zmdi-facebook {
+.zmdiFacebook {
   background: #3b5998; }
 
-.zmdi-twitter {
+.zmdiTwitter {
   background: #1da0f2; }
 
-.zmdi-google {
+.zmdiGoogle {
   background: #e72734; }
 
-.signin-form {
+.signinForm {
   margin-right: 90px;
   margin-left: 80px; }
 
-.signin-image {
+.signinImage {
   margin-left: 110px;
   margin-right: 20px;
   margin-top: 10px; }
@@ -536,7 +537,7 @@ label.valid {
   .container {
     max-width: 1200px; } }
 @media screen and (max-width: 768px) {
-  .signup-content, .signin-content {
+  .signupContent, .signinContent {
     flex-direction: column;
     -moz-flex-direction: column;
     -webkit-flex-direction: column;
@@ -548,14 +549,14 @@ label.valid {
     -o-justify-content: center;
     -ms-justify-content: center; }
 
-  .signup-form {
+  .signupForm {
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
     /* box-sizing: border-box; */
     padding: 0 30px; }
 
-  .signin-image {
+  .signinImage {
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 50px;
@@ -565,20 +566,20 @@ label.valid {
     -o-order: 2;
     -ms-order: 2; }
 
-  .signup-form, .signup-image, .signin-form, .signin-image {
+  .signupForm, .signupImage, .signinForm, .signinImage {
     width: auto; }
 
-  .social-login {
+  .socialLogin {
     justify-content: center;
     -moz-justify-content: center;
     -webkit-justify-content: center;
     -o-justify-content: center;
     -ms-justify-content: center; }
 
-  .form-button {
+  .formButton {
     text-align: center; }
 
-  .signin-form {
+  .signinForm {
     order: 1;
     -moz-order: 1;
     -webkit-order: 1;
@@ -588,17 +589,17 @@ label.valid {
     margin-left: 0px;
     padding: 0 30px; }
 
-  .form-title {
+  .formTitle {
     text-align: center; } }
 @media screen and (max-width: 400px) {
-  .social-login {
+  .socialLogin {
     flex-direction: column;
     -moz-flex-direction: column;
     -webkit-flex-direction: column;
     -o-flex-direction: column;
     -ms-flex-direction: column; }
 
-  .social-label {
+  .socialLabel {
     margin-right: 0px;
     margin-bottom: 10px; } }
 
