--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -7,7 +7,6 @@
         padding: 15px 20px;
         display: flex;
         justify-content: space-between;
-        margin-bottom:10px;
       
         /* positioning */
         position: sticky;
@@ -15,7 +14,7 @@
         top:0;
 
         /* background */
-        box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
+        box-shadow: 0 0.5px 0.5px #ccc;
         background-color: white;
     }
 
