--- a/src/components/Home/LeftPanel/Profile/Profile.css
+++ b/src/components/Home/LeftPanel/Profile/Profile.css
@@ -3,13 +3,12 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    border: 1px solid #eee;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     align-items: center;
     padding: 20px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    border-bottom: 1px solid #eee;
     background-color: white;
-    margin-bottom: 10px;
+    width: 100%;
 }
 
 .Info {
@@ -36,6 +35,8 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 0px 5px;
+    width: 100%;
+    text-align: center;
 }
 
 .stats > div{
@@ -44,8 +45,8 @@
     justify-content: space-around;
 }
 
-.stats > div> div{
-    margin: 0px 5px;
+.stats > div> div > p:nth-child(2n){
+    font-size: 13px;
 }
 
 .stats button {
@@ -66,12 +67,12 @@
     background-color: #0f8cda;
 }
 
-.stats > div{
+/* .stats > div{
     margin: 5px;
-}
+} */
 
-.Intrest {
-    /* border: 1px solid black; */
+/* .Intrest {
+    border: 1px solid black;
     width: 100%;
     margin:10px;
     display: flex;
@@ -93,4 +94,4 @@
 }
 .Intrest > div > p {
     font-size: 13px;
-}
+} */
