--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -23,9 +23,10 @@
 }
 
 .Header img{
-    height: 30px;
-    width: 30px;
+    height: 35px;
+    width: 35px;
     border-radius: 50%;
+    border: 0.5px solid lightgray;
 }
 
 .NamePhoto{
