--- a/src/components/Home/RightPanel/Activity/ActivityItem/ActivityItem.css
+++ b/src/components/Home/RightPanel/Activity/ActivityItem/ActivityItem.css
@@ -3,9 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-bottom: 1px solid lightgrey;
-    padding: 7px;
-    /* margin-top: 5px; */
+    margin: 10px 0px;
     align-items: center;
     font-size: 11.5px;
 }
@@ -14,9 +12,10 @@
     height: 36px;
     width: 36x;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
-.MyImage > img{
+.MyImage  img{
     height: 36px;
     width: 36px;
     border-radius: none !important;
