--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,22 +1,18 @@
 .Chat{
     min-height: 100vh;
-    width: 370px;
+    width: 550px;
     background-color: white;
     padding:10px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     box-sizing: border-box;
     box-shadow: 0 5px 7px #ccc;
     border: 1px solid #eee;
-    position: fixed;
+    /* position: fixed;
     right: -100%;
-    top: 80px;
-    z-index: 100;
+    top: 80px; */
     transition: all 0.5s;
 }
 
-.ActiveChat{
-    right: 0%;
-}
 .Header {
     width: 100%;
     background-color: #F9F9F9;
