--- a/src/containers/Home/MainSection/MainSection.css
+++ b/src/containers/Home/MainSection/MainSection.css
@@ -8,7 +8,9 @@
     /* background-color: white; */
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
+    justify-content:center;
+    font-family: "Work Sans";
+    margin: 0px 20px 0px 20px;
 }
 
 .Line{
@@ -23,6 +25,7 @@
 }
 
 .Feed{
+    margin-top: 20px;
     flex: 1;
 }
 
