--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,16 +1,22 @@
 .Chat{
     min-height: 100vh;
-    width: 550px;
+    width: 400px;
     background-color: white;
     padding:10px;
     /* overflow-y: scroll; */
     box-sizing: border-box;
-    box-shadow: 0 5px 7px #ccc;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
     border: 1px solid #eee;
-    /* position: fixed;
+    position: fixed;
     right: -100%;
-    top: 80px; */
+    top: 79px;
     transition: all 0.5s;
+    z-index: 100;
+    font-family:"Work Sans","Open Sans";
+}
+
+.ActiveChat{
+    right: 0%;
 }
 
 .Header {
@@ -33,7 +39,7 @@
     cursor: pointer;
     font-size: 15px;
     font-weight: bold;
-    margin: 0px 5px;
+    margin: 0px 20px;
 }
 
 .ActiveButton {
