--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -10,6 +10,7 @@
     background-color: white;
     border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    position: relative;
 }
 .Post > div{
     margin-bottom: 10px;
