--- a/frontend/src/containers/Home/Home.css
+++ b/frontend/src/containers/Home/Home.css
@@ -27,7 +27,7 @@
   border-radius: 50%;
   outline: none;
   border: none;
-  box-shadow: 0 2px 3px #ccc;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background-color: coral;
   color: white;
   padding-top: 5px;
@@ -39,3 +39,9 @@
 /* .home{
   max-width: 1600px;
 } */
+
+@media (max-width:400px) {
+  .SwitchButton{
+    display: none;
+  }
+}
