--- a/frontend/src/components/Home/Header/Header1.css
+++ b/frontend/src/components/Home/Header/Header1.css
@@ -36,6 +36,10 @@
     align-items: center;
 }
 
+.MenuIcon {
+    display: none;
+}
+
 .Input input{
     background-color: transparent;
     width: 400px;
@@ -53,4 +57,45 @@
     border:none;
     cursor: pointer;
     background-color: transparent;
+}
+
+.HamburgerButton{
+    display: none;
+}
+@media (max-width: 700px){
+    .Input input{
+        width: 300px;
+    }
+
+    .HeaderContent  img{
+        height: 50px;
+    }
+}
+
+
+@media (max-width:580px) {
+    .HeaderContent{
+        height: 50px;
+    }
+    .HeaderContent img{
+        display: none;
+    }
+    .HamburgerButton{
+        display: block;
+    }
+}
+
+@media (max-width: 500px){
+    .Input input{
+        width: 200px;
+    }
+    .Input{
+        padding-top: 2px;
+        padding-bottom: 2px;
+    }
+
+    .HeaderContent  img{
+        height: 40px;
+    }
+    
 }
