--- a/frontend/src/components/Home/LeftPanel/DashBoard/DashBoard.css
+++ b/frontend/src/components/Home/LeftPanel/DashBoard/DashBoard.css
@@ -17,3 +17,9 @@
     width: 100%;
     border-top: 1px solid #eee;
 }
+
+@media (max-width: 700px) {
+    .DashBoard{
+        min-width: 250px;
+    }
+}
