--- a/frontend/src/components/Home/RightPanel/TopNews/TopNews.css
+++ b/frontend/src/components/Home/RightPanel/TopNews/TopNews.css
@@ -1,11 +1,10 @@
 .TopNews {
     box-sizing: border-box;
-    /* border: 1px solid #eee; */
+    border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-    /* border-radius: 10px; */
+    border-radius: 10px;
     padding: 20px;
     background-color: white;
-    height: 100vh;
 }
 
 .heading {
