--- a/frontend/src/containers/Home/Chat/Chat.css
+++ b/frontend/src/containers/Home/Chat/Chat.css
@@ -1,21 +1,16 @@
 .Chat{
     min-height: 100vh;
-    width: 400px;
+    width: 550px;
     background-color: white;
     padding:10px;
     /* overflow-y: scroll; */
     box-sizing: border-box;
-    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-    position: fixed;
+    box-shadow: 0 5px 7px #ccc;
+    border: 1px solid #eee;
+    /* position: fixed;
     right: -100%;
-    top: 79px;
+    top: 80px; */
     transition: all 0.5s;
-    z-index: 100;
-    font-family:"Work Sans","Open Sans";
-}
-
-.ActiveChat{
-    right: 0%;
 }
 
 .Header {
@@ -38,7 +33,7 @@
     cursor: pointer;
     font-size: 15px;
     font-weight: bold;
-    margin: 0px 20px;
+    margin: 0px 5px;
 }
 
 .ActiveButton {
@@ -48,24 +43,4 @@
 .Option{
     display: inline-block;
     float: right;
-}
-
-@media (max-width: 700px){
-    .Chat{
-        top:60px;
-        max-width: 300px;
-    }
-
-}
-
-@media (max-width:580px) {
-    .Chat{
-        top: 52px;
-    }
-}
-
-@media (max-width: 400px){
-    .Chat{
-        display: none;
-    }
 }
