--- a/frontend/src/components/Home/LeftPanel/Profile/Profile.css
+++ b/frontend/src/components/Home/LeftPanel/Profile/Profile.css
@@ -7,7 +7,7 @@
     padding: 20px;
     /* border-radius: 10px; */
     border-bottom: 1px solid #eee;
-    background-color: white;
+    background-color:inherit;
     width: 100%;
 }
 
