--- a/frontend/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/Post.css
@@ -11,6 +11,20 @@
     border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     position: relative;
+    transition: all 0.3s;
+}
+
+.Dark{
+    background-color: #1E2021;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border:none;
+    color: white;
+}
+.Dark p{
+    color: white;
+}
+.Dark input{
+    color: white;
 }
 .Post > div{
     margin-bottom: 10px;
@@ -90,6 +104,7 @@
     padding: 5px 5px;
     border: none;
     outline: none;
+    background-color: transparent;
 }
 .Comment input:focus{
     border: none;
