--- a/frontend/src/components/Home/LeftPanel/DashBoard/DashBoard.css
+++ b/frontend/src/components/Home/LeftPanel/DashBoard/DashBoard.css
@@ -3,9 +3,8 @@
     overflow-y: scroll;
     width: 100%;
     min-width: 300px;
-    background-color: white;
+    background-color: inherit;
     box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .DashBoard::-webkit-scrollbar{
