--- a/frontend/src/containers/Home/RightSection/RightPanel.css
+++ b/frontend/src/containers/Home/RightSection/RightPanel.css
@@ -5,11 +5,21 @@
     max-width: 300px;
     position: sticky;
     right: 0px;
-    top: 80px;
+    top: 77px;
     font-family: "Work Sans";
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
-
+.Dark{
+    background-color: #1E2021;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border:none;
+    color: white;
+}
+.Dark p{
+    color: white;
+}
 
 @media (max-width: 1000px){
     .RightPanel{
