--- a/frontend/src/components/Home/Chat/ChatItem/ChatItem.css
+++ b/frontend/src/components/Home/Chat/ChatItem/ChatItem.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: inherit;
+    background-color: #F9F9F9 ;
     box-sizing: border-box;
     padding: 5px;
     margin: 7px 0px;
@@ -11,7 +11,7 @@
 }
 
 .ChatItem:hover{
-    background-color:#949494 ;
+    background-color:#dadada ;
     border-radius: 5px;
 }
 
