--- a/frontend/src/components/Home/Chat/ChatItem/ChatItem.css
+++ b/frontend/src/components/Home/Chat/ChatItem/ChatItem.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #F9F9F9 ;
+    background-color: inherit ;
     box-sizing: border-box;
     padding: 5px;
     margin: 7px 0px;
