--- a/frontend/src/containers/Home/RightSection/RightPanel.css
+++ b/frontend/src/containers/Home/RightSection/RightPanel.css
@@ -8,6 +8,7 @@
     top: 77px;
     font-family: "Work Sans";
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    transition: all 0.3s;
 }
 
 .Dark{
