--- a/frontend/src/containers/Home/Chat/chatIn.css
+++ b/frontend/src/containers/Home/Chat/chatIn.css
@@ -1,12 +1,18 @@
 .chat{
     flex: 0.65;
-    display:flex;
-    flex-direction: column;
+    padding:10px;
+    display: inline-block;
+    /* box-sizing: border-box; */
+    /* flex-direction: column-reverse; */
+    position: fixed;
+    top: 75%;
+    right: 0;
+    background-color: #fff;
 }
 
 .chat_header{
     padding:20px;
-    display:flex;
+    /* display:flex; */
     align-items:center;
     border-bottom: 1px solid lightgray;
 }
@@ -23,7 +29,7 @@
     color: gray;
 }
 .chat_headerRight{
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     min-width: 100px;
 }
