Added Comment Section

--- a/frontend/src/components/Home/Header/Header1.css
+++ b/frontend/src/components/Home/Header/Header1.css
@@ -11,7 +11,7 @@
 }
 
 .Dark{
-    background-image:linear-gradient(to right,#603FEE,#8D41EE);
+    background-color:#161B22;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
