--- a/frontend/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/Post.css
@@ -1,7 +1,7 @@
 .Post{
     box-sizing: border-box;
     background-color: #e0dfdf;
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
     border-radius: 15px;
     margin: 15px 5px;
     /* min-width: 300px; */
@@ -11,6 +11,7 @@
     border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     position: relative;
+    /* transition: all 0.3s; */
 }
 
 .Dark{
@@ -24,6 +25,9 @@
 }
 .Dark input{
     color: white;
+}
+.Dark .IconColor{
+    color: lightgray;
 }
 
 .Post > div{
