--- a/frontend/src/containers/Home/Chat/Chat.css
+++ b/frontend/src/containers/Home/Chat/Chat.css
@@ -5,7 +5,7 @@
     padding:10px;
     /* overflow-y: scroll; */
     box-sizing: border-box;
-    box-shadow: 0 5px 7px #ccc;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     border: 1px solid #eee;
     position: fixed;
     right: -100%;
