--- a/frontend/src/components/Home/MainSection/CreateFeed/CreateFeed.css
+++ b/frontend/src/components/Home/MainSection/CreateFeed/CreateFeed.css
@@ -1,7 +1,7 @@
 .CreateFeed {
     box-sizing: border-box;
     background-color: #e0dfdf;
-    padding: 10px 20px;
+    padding: 20px;
     min-width: 300px;
     max-width: 550px;
     border-radius: 15px;
@@ -11,7 +11,26 @@
     border: 1px solid #eee;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     transition: all 0.3s;
+    overflow-y: scroll;
+    max-height: 600px;
+}
 
+
+
+.Content{
+    width: 100%;
+}
+
+.Content img{
+    min-width: 100%;
+    margin: auto;
+    display: block;
+}
+
+.Content video{
+    max-height: 250px;
+    margin: auto;
+    display: block;
 }
 
 .Dark{
@@ -24,6 +43,9 @@
     color: white;
     border-color: white;
 }
+.Dark .Type textarea{
+    color: white;
+}
 
 .IconColor{
     color: grey;
@@ -33,7 +55,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 .Type img{
@@ -41,22 +65,20 @@
     width: 50px;
     border-radius: 50%;
 }
+
 .Type textarea{
-    margin: 10px 10px 0px 10px;
-    height: 35px;
-    outline: none;
+    resize: none;
+    overflow: hidden;
+    min-height: 25px;
+    /* max-height: 100px; */
+    width: 100%;
+    margin-left: 10px;
     border: none;
-    background-color: transparent;
-    word-break: break-all;
-    min-width: 90%;
-    min-height: 50px;
     font-family: inherit;
-    font-weight: 500;
-    word-break: normal;
-    font-size: 15px;
-    color: grey;
-    padding: 5px;
+    background-color: transparent;
 }
+
+
 
 .line{
     height: 0.2px;
@@ -71,7 +93,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
 }
+
 
 @media (max-width: 1000px){
 
